footer gap fix

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -157,7 +157,7 @@
   list-style: none;
   display: flex;
   flex-direction: column;
-  gap: 2rem;
+  gap: 1rem;
   padding: 1rem;
   min-width: fit-content;
 }
